All stretch goals complete

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <section class="content-nav">
     <h1>SpaceWalkers</h1>
     <nav>
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">About Us</a>
-      <a href="#">Blog</a>
+      <a href="Blog.html">Blog</a>
       <a href="#">Contact</a>
       <a href="#">Sign In</a>
     </nav>
@@ -72,6 +72,17 @@
       </div>
 
     </section>
+
+    <form class="sign-up">
+      Username:
+      <input type="text" name="lastname">
+      eMail:
+      <input type="text" name="firstname">
+      Password:
+      <input type="text" name="lastname">
+      Confirm:
+      <input type="text" name="firstname">
+    </form> 
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
