--- a/Blog.html
+++ b/Blog.html
@@ -25,7 +25,7 @@
       <a href="#">About Us</a>
       <a href="Blog.html">Blog</a>
       <a href="#">Contact</a>
-      <a href="#">Sign In</a>
+      <a href="SignUp.html">Sign In</a>
     </nav>
   </section>
 
@@ -59,8 +59,8 @@
 
     <section class="walk">
       
-      <div class="walk-img">
-        <img src="img/whatisspacet.jpg" alt="Space walking astronaut">
+      <div class="walk-img rev">
+        <img src="img/launch.png" alt="Space walking astronaut">
       </div>
 
       
